examples/invalid/redeclarations/redeclarationField.vbr
chord A {
    a: quarter,
    b: whole,
    c: eighth,
    a: quarter
}

moderato() {

}